<resources>
    <string name="app_name">KJ Trufas</string>
    <string name="Administrador">Administrador</string>
    <string name="ProdutosDisponiveis">Produtos disponíveis</string>
    <string name="RealizarVenda">Realizar venda</string>
    <string name="ConsultarComanda">Consultar comanda</string>
    <string name="Cadastrar">Cadastrar</string>
    <string name="Consultar">Consultar</string>
    <string name="Configurações">Configurações</string>
    <string name="Vendedor">Vendedor</string>
    <string name="Produto">Produto</string>
    <string name="Sabor">Sabor</string>
    <string name="SaborProduto">Sabor do produto</string>
    <string name="Salvar">Salvar</string>
    <string name="Excluir">Excluir</string>
    <string name="Ativo">Ativo: </string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
